# corevm

./: .gitignore  Cargo.toml  README.md  TODO.md  vmm-cluster.toml  vmm-s3gw.toml  vmm-san.toml  vmm-server.toml
apps/san-testbed/: Cargo.toml
apps/san-testbed/src/: cli.rs  cluster.rs  context.rs  db_init.rs  io_harness.rs  io_tests.rs  main.rs  partition.rs  scenarios.rs  schema.sql  witness.rs
apps/vmctl/: Cargo.toml
apps/vmctl/src/: main.rs
apps/vmm-appliance/: Cargo.toml
apps/vmm-appliance/src/: main.rs
apps/vmm-appliance/src/common/: certs.rs  config.rs  firewall.rs  mod.rs  network.rs  system.rs  widgets.rs
apps/vmm-appliance/src/dcui/: api_access.rs  certs.rs  diagnostics.rs  logs.rs  mod.rs  network.rs  passwords.rs  ports.rs  reboot.rs  reset.rs  services.rs  status.rs  time.rs  update.rs
apps/vmm-appliance/src/installer/: api_access.rs  certs.rs  disk.rs  mod.rs  network.rs  ports.rs  progress.rs  summary.rs  timezone.rs  users.rs  welcome.rs
apps/vmm-cluster/: Cargo.toml
apps/vmm-cluster/src/: config.rs  main.rs  san_client.rs  state.rs
apps/vmm-cluster/src/api/: activity.rs  alarms.rs  auth.rs  cluster_settings.rs  clusters.rs  discovery.rs  drs.rs  events.rs  hosts.rs  logs.rs  migration.rs  mod.rs  network.rs  notifications.rs  san.rs  storage.rs  storage_wizard.rs  system.rs  tasks.rs  users.rs  viswitch.rs  vms.rs
apps/vmm-cluster/src/auth/: middleware.rs  mod.rs
apps/vmm-cluster/src/db/: mod.rs
apps/vmm-cluster/src/engine/: discovery.rs  drs.rs  ha.rs  heartbeat.rs  maintenance.rs  mod.rs  notifier.rs  reconciler.rs  san_health.rs  scheduler.rs  sdn.rs
apps/vmm-cluster/src/node_client/: mod.rs  types.rs
apps/vmm-cluster/src/services/: alarm.rs  audit.rs  auth.rs  base.rs  cluster.rs  datastore.rs  drs_exclusion.rs  drs_service.rs  event.rs  group.rs  host.rs  ldap.rs  migration.rs  mod.rs  network.rs  notification.rs  registry.rs  resource_group.rs  settings.rs  stats.rs  storage_compat.rs  storage_wizard.rs  task.rs  user.rs  validation.rs  viswitch.rs  vm.rs
apps/vmm-cluster/src/ws/: console_bridge.rs  mod.rs  terminal.rs
apps/vmm-iscsi/: Cargo.toml
apps/vmm-iscsi/src/: alua.rs  config.rs  discovery.rs  main.rs  pdu.rs  scsi.rs  session.rs  socket.rs
apps/vmm-s3gw/: Cargo.toml
apps/vmm-s3gw/src/: auth.rs  config.rs  main.rs  socket.rs
apps/vmm-s3gw/src/s3/: bucket.rs  error.rs  mod.rs  multipart.rs  object.rs  xml.rs
apps/vmm-san/: Cargo.toml  build.rs
apps/vmm-san/src/: auth.rs  config.rs  main.rs  state.rs
apps/vmm-san/src/api/: backends.rs  benchmark.rs  chunks.rs  disks.rs  files.rs  iscsi.rs  mod.rs  peers.rs  s3.rs  status.rs  volumes.rs
apps/vmm-san/src/db/: helpers.rs  mod.rs
apps/vmm-san/src/engine/: backend_refresh.rs  benchmark.rs  db_mirror.rs  dedup.rs  discovery.rs  disk_monitor.rs  disk_server.rs  event_reporter.rs  fuse_mount.rs  integrity.rs  iscsi_server.rs  metadata_sync.rs  mgmt_server.rs  mod.rs  object_server.rs  peer_monitor.rs  placement.rs  push_replicator.rs  rebalancer.rs  repair.rs  replication.rs  sanitize.rs  smart_monitor.rs  write_lease.rs
apps/vmm-san/src/peer/: client.rs  mod.rs  protocol.rs
apps/vmm-san/src/services/: backend.rs  benchmark.rs  chunk.rs  disk.rs  file.rs  mod.rs  peer.rs  volume.rs
apps/vmm-san/src/storage/: backend.rs  chunk.rs  disk.rs  disk_ops.rs  file_map.rs  mod.rs  smart.rs
apps/vmm-server/: Cargo.toml  build.rs
apps/vmm-server/src/: config.rs  discovery.rs  main.rs  state.rs
apps/vmm-server/src/agent/: auth.rs  handlers.rs  mod.rs  registration.rs
apps/vmm-server/src/api/: auth.rs  guard.rs  mod.rs  network.rs  resource_groups.rs  settings.rs  storage.rs  system.rs  users.rs  vms.rs
apps/vmm-server/src/auth/: api_access.rs  jwt.rs  middleware.rs  mod.rs
apps/vmm-server/src/db/: mod.rs
apps/vmm-server/src/services/: event_reporter.rs  mod.rs  resource_groups.rs  storage.rs  vm.rs
apps/vmm-server/src/vm/: event_handler.rs  framebuffer_encoder.rs  input_translator.rs  manager.rs  mod.rs
apps/vmm-server/src/ws/: console.rs  mod.rs  terminal.rs
apps/vmmanager/: Cargo.toml  build.rs
apps/vmmanager/linux/: corevm-manager.desktop
apps/vmmanager/src/: app.rs  config.rs  diagnostics.rs  dialog_about.rs  dialog_add_disk.rs  dialog_create_disk.rs  dialog_create_vm.rs  dialog_disk_pool.rs  dialog_snapshots.rs  dialogs.rs  display.rs  filebrowser.rs  input.rs  main.rs  platform.rs  settings.rs  sidebar.rs  statusbar.rs  theme.rs  toolbar.rs  vm.rs
apps/vmmanager/src/engine/: diagnostics.rs  evdev_input.rs  evdev_mouse.rs  input.rs  iso_detect.rs  mod.rs  platform.rs  vm.rs
apps/vmmanager/src/ui/: mod.rs  theme.rs
apps/vmmanager/src/ui/components/: display.rs  (+6 more)
apps/vmmanager/win64/: app.rc
apps/vmmctl/: Cargo.toml
apps/vmmctl/src/: auth.rs  client.rs  config.rs  main.rs  output.rs
apps/vmmctl/src/commands/: api_access.rs  auth_status.rs  cluster.rs  config_cmd.rs  login.rs  mod.rs  network.rs  storage.rs  system.rs  user.rs  vm.rs
libs/libcorevm/: Cargo.toml  GAP_LIST_X86_64.md  exports.def
libs/libcorevm/bios/: Makefile  bda.asm  bios.asm  boot.asm  e820.asm  ide.asm  int10h.asm  int13h.asm  int15h.asm  int16h.asm  int19h.asm  int1ah.asm  int_misc.asm  ivt.asm  pci.asm  pic_pit.asm  post.asm  selftest.asm  serial.asm  strings.asm  video_init.asm
libs/libcorevm/src/: error.rs  ffi.rs  flags.rs  instruction.rs  interrupts.rs  io.rs  lib.rs  net.rs  registers.rs  san_disk.rs  setup.rs  vm.rs
libs/libcorevm/src/backend/: anyos.rs  kvm.rs  mod.rs  types.rs  whp.rs
libs/libcorevm/src/devices/: ac97.rs  acpi.rs  acpi_tables.rs  ahci.rs  apm.rs  bus.rs  chipset.rs  cmos.rs  debug_port.rs  disk_cache.rs  dma.rs  e1000.rs  fw_cfg.rs  gpu.rs  hpet.rs  ide.rs  ioapic.rs  lapic.rs  mod.rs  net.rs  nic.rs  pic.rs  pit.rs  port61.rs  ps2.rs  q35_mch.rs  serial.rs  slirp.rs  smbus.rs  svga.rs  uhci.rs  virtio_gpu.rs  virtio_input.rs  virtio_net.rs  vmware.rs
libs/libcorevm/src/memory/: flat.rs  mmio.rs  mod.rs  segment.rs
libs/libcorevm/src/runtime/: cancel.rs  config.rs  control_handle.rs  event.rs  loop_core.rs  mod.rs  smp.rs
(+258 files in other folders)
