[workspace]
members = [
  "apps/vmctl",
  "apps/vmmanager",
  "apps/vmm-server",
  "apps/vmm-cluster",
  "libs/vmm-core",
  "tests/hosttests",
]
exclude = [
  # libcorevm has its own workspace (no_std / multi-target)
  "libs/libcorevm",
  "libs/stubs",
]
resolver = "2"

[profile.release]
debug = 2                # Full DWARF debug info
overflow-checks = true   # Catch integer overflow as panic
