[workspace]
members = [
  "apps/vmctl",
  "apps/vmmctl",
  "apps/vmmanager",
  "apps/vmm-server",
  "apps/vmm-cluster",
  "apps/vmm-san",
  "apps/vmm-appliance",
  "apps/san-testbed",
  "libs/vmm-core",
  "tests/hosttests",
]
exclude = [
  # libcorevm has its own workspace (no_std / multi-target)
  "libs/libcorevm",
  "libs/stubs",
]
resolver = "2"

[workspace.package]
version = "0.2.21"

[profile.release]
debug = 2                # Full DWARF debug info
overflow-checks = true   # Catch integer overflow as panic
