[package]
name = "corevm-vmctl"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
libcorevm = { path = "../../libs/libcorevm", default-features = false, features = ["linux"] }

[target.'cfg(target_os = "windows")'.dependencies]
libcorevm = { path = "../../libs/libcorevm", default-features = false, features = ["windows"] }
