[package]
name = "vmm-appliance"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vmm-appliance"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.33"
nix = { version = "0.29", features = ["mount", "reboot", "user", "fs", "process", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
anyhow = "1"
