[package]
name = "vmm-cluster"
version = "0.1.0"
edition = "2021"
description = "CoreVM cluster orchestration server — central authority managing multiple vmm-server nodes"

[[bin]]
name = "vmm-cluster"
path = "src/main.rs"

[dependencies]
# Shared models
vmm-core = { path = "../../libs/vmm-core" }

# Terminal command engine
vmm-term = { path = "../../libs/vmm-term" }

# Web framework
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "fs", "trace"] }
tokio = { version = "1", features = ["full"] }

# HTTP client (for Agent API calls to nodes)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
futures = "0.3"
gethostname = "0.5"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
