[package]
name = "corevm-vmmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
libcorevm = { path = "../../libs/libcorevm", default-features = false }
uuid = { version = "1", features = ["v4"] }
arboard = "3"

[build-dependencies]
winres = "0.1"
