[package]
name = "vmmctl"
version.workspace = true
edition = "2021"
description = "CoreVM CLI management tool — remote server administration via REST API"

[[bin]]
name = "vmmctl"
path = "src/main.rs"

[dependencies]
# Shared models
vmm-core = { path = "../../libs/vmm-core" }

# CLI framework
clap = { version = "4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Output formatting
tabled = "0.17"
colored = "3"

# Utilities
dirs = "6"
chrono = "0.4"
rpassword = "7"
base64 = "0.22"
